# rusty_recognition

./: .gitignore  Cargo.toml  README.md  architecture.md  vision.md
crates/core/: Cargo.toml
crates/core/src/: backend.rs  lib.rs  profiler.rs  tensor.rs  train.rs
crates/core/src/data/: augmentation.rs  mnist.rs  mod.rs
crates/core/src/nn/: layers.rs  mod.rs  model_cnn.rs  model_mlp.rs  optim.rs
crates/core/src/ops_cpu/: matmul.rs  mod.rs  relu.rs  softmax.rs
crates/gpu_metal/: Cargo.toml
crates/gpu_metal/shaders/: kernels.metal
crates/gpu_metal/src/: backend.rs  buffer.rs  device.rs  launch.rs  lib.rs
crates/gpu_metal/src/ops/: matmul.rs  mod.rs  relu.rs  softmax.rs
data/: README.md
docs/: architecture.md  current.md  mnist_fix_checklist.md  pipeline.md  vision.md
