[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/gpu_metal", 
    "crates/bin"
]

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"